--- a/model_tuning.ipynb
+++ b/model_tuning.ipynb
@@ -59,6 +59,7 @@
     "from time import time\n",
     "from functools import partial\n",
     "from zipfile import ZipFile\n",
+    "import re\n",
     "from helper_functions import * # functions defined in helper_functions.py"
    ]
   },
